--- a/build.gradle
+++ b/build.gradle
@@ -39,8 +39,7 @@ repositories {
 }
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web")
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile "org.springframework.boot:spring-boot-starter-web"
 }
 
 sourceSets {
