intrdouce todo service

--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ repositories {
 
 dependencies {
     compile "org.springframework.boot:spring-boot-starter-web"
+    compile "org.projectlombok:lombok:1.16.10"
 }
 
 sourceSets {
