--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     compile "org.projectlombok:lombok:1.16.10"
     compile "org.aspectj:aspectjweaver:1.9.2"
 
+    testCompile "org.springframework.boot:spring-boot-starter-test"
+
 //    featureTestCompile "org.springframework.boot:spring-boot-starter-test"
 //    featureTestCompile "com.github.tomakehurst:wiremock-standalone:2.16.0"
 //    featureTestCompile "info.cukes:cucumber-java:1.2.5"
