--- a/build.gradle
+++ b/build.gradle
@@ -42,21 +42,21 @@ sourceSets {
         }
         resources.srcDir file('src/testStubbed/resources')
     }
-    testFeature {
+    testIntegration {
         java {
             compileClasspath += main.output + test.output
             runtimeClasspath += main.output + test.output
-            srcDir file('src/testFeature/java')
+            srcDir file('src/testIntegration/java')
         }
-        resources.srcDir file('src/testFeature/resources')
+        resources.srcDir file('src/testIntegration/resources')
     }
 }
 
 configurations {
     testStubbedCompile.extendsFrom testCompile
     testStubbedRuntime.extendsFrom testRuntime
-    testFeatureCompile.extendsFrom testCompile
-    testFeatureRuntime.extendsFrom testRuntime
+    testIntegrationCompile.extendsFrom testCompile
+    testIntegrationRuntime.extendsFrom testRuntime
 }
 
 dependencies {
@@ -66,9 +66,9 @@ dependencies {
 
     testCompile "org.springframework.boot:spring-boot-starter-test"
 
-    testFeatureCompile "info.cukes:cucumber-java:1.2.5"
-    testFeatureCompile "info.cukes:cucumber-junit:1.2.5"
-    testFeatureCompile "info.cukes:cucumber-spring:1.2.5"
+    testIntegrationCompile "info.cukes:cucumber-java:1.2.5"
+    testIntegrationCompile "info.cukes:cucumber-junit:1.2.5"
+    testIntegrationCompile "info.cukes:cucumber-spring:1.2.5"
 }
 
 
@@ -89,8 +89,8 @@ task testStubbed(type: Test) {
 task testIntegration(type: Test) {
     include 'com/nab/se/helloWorld/test/integration/configuration/testRunner/CucumberTestRunner.class'
     systemProperties['cucumber.options'] = "-t @IntegrationTest"
-    systemProperties['spring.profiles.active'] = "testFeature"
-    testClassesDir = sourceSets.testFeature.output.classesDir
-    classpath = sourceSets.testFeature.runtimeClasspath
+    systemProperties['spring.profiles.active'] = "testIntegration"
+    testClassesDir = sourceSets.testIntegration.output.classesDir
+    classpath = sourceSets.testIntegration.runtimeClasspath
     outputs.upToDateWhen { false }
 }
